...
            android:layout_height="wrap_content"
            android:text="@string/emailaddress"
            android:paddingLeft="10dp"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/input_email_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:labelFor="@id/input_email_reset"
            android:inputType="textEmailAddress" />
...
